@@ -53,7 +53,7 @@ sub render {
   my ($self, $c, $args) = @_;
   $args ||= {};
 
-  # Localize "extends" and "layout"
+  # Localize "extends" and "layout" to allow argument overrides
   my $stash = $c->stash;
   local $stash->{layout}  = $stash->{layout}  if exists $stash->{layout};
   local $stash->{extends} = $stash->{extends} if exists $stash->{extends};
